<resources>
    <string name="app_name">Unicycle Football</string>
    <string name="stats">Stats</string>
    <string name="title_activity_stats">statsActivity</string>
    <string name="statsButton">Stats Go</string>
    <string name="teamButton">Team Go</string>
    <string name="schedButton">Schedule Go</string>
    <string name="title_activity_schedule">scheduleActivity</string>
    <string name="title_activity_team">teamActivity</string>
    <string name="uflLogoText">"Unicycle Football League"</string>
    <string-array name="teams_array">
        <item>Blackouts</item>
        <item>Beardos</item>
        <item>Chupacabras</item>
        <item>Gnarwhals</item>
        <item>Hotdogs</item>
        <item>Unicychos</item>
        <item>Unicorns</item>
        <item>WildHogs</item>
    </string-array>
    <string name="title_activity_blackouts">blackoutsActivity</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_teams">Teams</string>
    <string name="title_stats">Stats</string>
    <string name="title_ruleBook">RuleBook</string>
    <string name="title_home">Home</string>
</resources>