<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bluebackground"
    tools:context="jeyts.uflapplication.newLanding">


    <ImageButton
        android:id="@+id/imgbtnStats"
        android:layout_width="104dp"
        android:layout_height="86dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="44dp"
        android:background="@mipmap/barchart"
        android:contentDescription="@string/statsButton"
        android:elevation="7dp"
        android:onClick="goStats"
        app:layout_constraintBottom_toTopOf="@+id/imgbtnRule"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imgbtnRule"
        android:layout_width="104dp"
        android:layout_height="86dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="44dp"
        android:background="@mipmap/footballrefereewhistle"
        android:contentDescription="@string/stats"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imgbtnTeam"
        android:layout_width="104dp"
        android:layout_height="86dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="44dp"
        android:background="@mipmap/teamshield"
        android:contentDescription="@string/teamButton"
        android:elevation="13dp"
        android:onClick="goTeam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imgbtnSched"
        android:layout_width="104dp"
        android:layout_height="86dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="44dp"
        android:background="@mipmap/calendar"
        android:contentDescription="@string/schedButton"
        android:elevation="24dp"
        android:onClick="goSched"
        app:layout_constraintBottom_toTopOf="@+id/imgbtnTeam"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="324dp"
        android:layout_height="172dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="91dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uflTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="102dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/uflLogoText" />

    <Button
        android:id="@+id/statsButtonHover"
        style="@android:style/Widget.Material.Light.Button"
        android:alpha=".2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="29dp"
        android:layout_marginStart="37dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtnRule"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statsButtonHover4"
        style="@android:style/Widget.Material.Light.Button"
        android:alpha=".2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="37dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtnTeam"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/statsButtonHover3"
        style="@android:style/Widget.Material.Light.Button"
        android:alpha=".2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="37dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statsButtonHover2"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="37dp"
        android:alpha=".2"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
